# pong

./: Cargo.toml  Readme.md  audio_license.txt  pkg.sh
assets/ui/: menu.ron  options.ron  start.ron
config/: settings.ron
src/: main.rs
src/audio/: audio.rs
src/ball/: ball_system.rs  bounce_system.rs  component.rs  mod.rs  trajectory_system.rs
src/paddle/: component.rs  mod.rs  paddle.rs
src/persistence/: mod.rs  window.rs
src/state/: main_menu.rs  mod.rs  options.rs  pause.rs  pong.rs  start.rs
src/taunt/: mod.rs  taunt_system.rs
src/timer/: mod.rs  timer_system.rs
src/winner/: winner.rs
