[package]
name = "impossi-pong"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version="0.15.3", features=["vulkan", "no-slow-safety-checks"] }
log = "0.4.14"
rand = "0.8.4"
ron = "0.6.5"
serde = { version = "1.0.130", features = ["derive"]}
